<?xml version="1.0"?>
<package format="2">
  <name>adeept_tank_driver</name>
  <version>0.0.0</version>
  <description>The adeept_tank_driver package</description>

  <maintainer email="griffin.peirce@alumni.ubc.ca">Griffin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
